<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_bg_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorModeDarkContent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_main_actmain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tabl_main_actmain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabl_main_actmain"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/bgimg_gradual_white75_vertical_flip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicator="@drawable/bgimg_gradual_white75_vertical_flip"
        app:tabIndicatorColor="#FFFFFF"
        app:tabIndicatorGravity="stretch"
        app:tabRippleColor="@color/colorMdmButtonBgcolor">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:forceDarkAllowed="false"
            android:icon="@mipmap/btn_feature_icon"
            android:scaleType="centerCrop"
            android:text="@string/page_feature_title_zh" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/btn_home_icon"
            android:scaleType="centerCrop"
            android:scrollbarSize="4dp"
            android:text="@string/page_home_title_zh" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/btn_setting_icon"
            android:scaleType="centerCrop"
            android:text="@string/page_setting_title_zh" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/btn_military_icon"
            android:text="@string/page_forwork_title_zh" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
