<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimg_gradual_white75_vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout_input_actdispatch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="20">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:gravity="center"
                    android:text="@string/page_feature_database_colum_title_button_a_zh"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorModeDarkTitle"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText

                    android:id="@+id/edtv_name_actdatabasemembers"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="5"
                    android:background="@drawable/shape_border_e"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="20">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:gravity="center"
                    android:text="@string/page_feature_database_colum_title_button_b_zh"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorModeDarkTitle"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText

                    android:id="@+id/edtv_phone_actdatabasemembers"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="5"
                    android:background="@drawable/shape_border_e"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="20">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:gravity="center"
                    android:text="@string/page_feature_database_colum_title_button_c_zh"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorModeDarkTitle"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText

                    android:id="@+id/edtv_rank_actdatabasemembers"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="5"
                    android:background="@drawable/shape_border_e"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="20">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:gravity="center"
                    android:text="@string/page_feature_database_colum_title_button_d_zh"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorModeDarkTitle"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText

                    android:id="@+id/edtv_job_actdatabasemembers"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="5"
                    android:background="@drawable/shape_border_e"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page_feature_database_colum_title_button_e_zh"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorModeDarkTitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtv_relation_actdatabasemembers"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="10"
                android:background="@drawable/shape_border_e"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page_feature_database_colum_title_button_f_zh"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorModeDarkTitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtv_tags_actdatabasemembers"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="10"
                android:background="@drawable/shape_border_e"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center|top"
                android:text="@string/page_feature_database_colum_title_button_g_zh"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorModeDarkTitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtv_else_actdatabasemembers"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/shape_border_e"
                android:gravity="top"
                android:singleLine="false"
                android:textIsSelectable="true" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_input_actdispatch">

        <Button
            android:id="@+id/bt_modify_actdatabasemembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_border_b"
            android:text="修改"
            android:textColor="@color/colorModeDarkTitle"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_clear_actdatabasemembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_border_b"
            android:text="清空顯示"
            android:textColor="@color/colorModeDarkTitle"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_create_actdatabasemembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_border_b"
            android:text="新增"
            android:textColor="@color/colorModeDarkTitle"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcy_main_actdatabasemembers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

</androidx.constraintlayout.widget.ConstraintLayout>